--- a/src/app/content/comment/userInfo/component.css
+++ b/src/app/content/comment/userInfo/component.css
@@ -1,3 +1,7 @@
+* {
+    outline: none;
+}
+
 .Comment-text {
     font-size: 56px;
 }
@@ -7,17 +11,18 @@
     font-style: italic;
 }
 
-textarea {
-    width: 200px;
-    height: 200px;
-    resize: none;
-    outline: none;
+label {
+    font-size: 24px;
 }
+
+input {
+    height: 30px;
+}
+
 
 button {
     width: 90px;
     height: 30px;
     color: #fff;
     background-color: steelblue;
-    cursor: pointer;
 }
